<resources>
    <string name="app_name">InClass Calculator</string>
    <string name="s_number_1">\u0031</string>
    <string name="s_number_2">\u0032</string>
    <string name="s_number_3">\u0033</string>
    <string name="s_number_4">\u0034</string>
    <string name="s_number_5">\u0035</string>
    <string name="s_number_6">\u0036</string>
    <string name="s_number_7">\u0037</string>
    <string name="s_number_8">\u0038</string>
    <string name="s_number_9">\u0039</string>
    <string name="s_number_0">\u0030</string>
    <string name="multiplicationSign">\u00D7</string>
    <string name="Division">\u00f7</string>
    <string name="Add">\u002B</string>
    <string name="minus">\u2212</string>
    <string name="decimal">\u22C5</string>
    <string name="equal">\u003D</string>
    <string name="Clear">\u0043</string>
    <string name="modulo">\u0025</string>
    <string name="plusMinus">\u00b1</string>
    <string name="Memory">\u004D\u0052</string>
    <string name="SubstractMEM">\u004D\u002D</string>
    <string name="AdDMEM">\u004D\u002B</string>
    <string name="MemoryClear">\u004D\u0043</string>
</resources>
